src/validation/tests/snapshots/rusty__validation__tests__statement_validation_tests__assignment_to_constants_result_in_an_error.snap
---
source: src/validation/tests/statement_validation_tests.rs
expression: "&diagnostics"
---
error[E036]: Cannot assign to CONSTANT 'prg.cl'
   ┌─ <internal>:20:13
   │
20 │             cl  := 4;
   │             ^^ Cannot assign to CONSTANT 'prg.cl'

error[E036]: Cannot assign to CONSTANT 'ci'
   ┌─ <internal>:22:13
   │
22 │             ci  := 4;
   │             ^^ Cannot assign to CONSTANT 'ci'
